# WINDROID-DXVK

./: BUILD_SUMMARY.md  BUILD_SYSTEM_GUIDE.md  DYNAMIC_PIPELINE_CACHE.md  IMPLEMENTATION_SUMMARY.md  build-adreno.sh  dxvk-adreno.conf  dxvk.conf  install-adreno-optimizations.sh  test_dynamic_pipeline_cache.cpp
src/d3d11/: d3d11_device.cpp  d3d11_options.cpp  d3d11_options.h
src/dxgi/: dxgi_adapter.cpp  dxgi_options.cpp  dxgi_options.h
src/dxvk/: dxvk_device.cpp  dxvk_device.h  dxvk_graphics.cpp  dxvk_graphics.h  dxvk_pipeline_cache.cpp  dxvk_pipeline_cache.h  meson.build
src/util/: meson.build
src/util/config/: config.cpp
